# massweb

./: .bish-index  .bish.sqlite  .gitignore  .project  LICENSE.txt  MANIFEST.in  Makefile  QUICKSTART.md  README.md  README.txt  START_HERE.md  massweb.conf.default.json.back  massweb_reducer.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: .bish-index  .bish.sqlite  copilot-instructions.md
.github/workflows/: auto-advance-ball.yml  auto-copilot-functionality-docs-review.yml  auto-gpt5-implementation.yml  auto-llm-issue-review.yml  auto-llm-pr-review.yml  ci.yml
docs/: .bish.sqlite  AI_WORKFLOWS.md  Makefile  conf.py  index.rst  massweb.mass_requests.rst  massweb.payloads.rst  massweb.results.rst  massweb.rst
docs/_static/: install.rst  intro.rst  usage.rst
fuzz_generators/: url_generator.py
hadoop-utils/: urls_to_fuzz
mass_requests/: mass_request.py
massweb/: .bish-index  .bish.sqlite  __init__.py
massweb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
massweb/fuzz_generators/: url_generator.py  url_generator.py~
massweb/fuzzers/: bsqli_fuzzer.py  get_fuzzer.py  get_fuzzer.py~  ifuzzer.py  ifuzzer.py~  web_fuzzer.py
massweb/hadoop-utils/: massweb_mapper.py  results.1  (+7 more)
pnk_net/: pnk_request.py
sphinx/: conf.py
targets/: target.py~
test/: .bish-index  .bish.sqlite  fuzzers.py  masscrawl.py  masscrawl_utils.py  massweb_tourture.py  refresh.sh  run.sh  test_fuzzers.py  test_public_api.py  test_webfuzzer_offline.py  util.py
vuln_checks/: check.py  mxi.py~  osci.py~  sqli.py  sqli.py~  xpathi.py~  xss.py  xss.py~
(+150 files in other folders)
